# silpostores

./: 20220322-170200-output.csv  README.md  pyproject.toml  requirements.txt
.github/workflows/: scheduled-github-action.yml
data/: 20220315-235330-silpo-stores.csv  20220316-062133-silpo-stores.csv  20220317-045727-silpo-stores.csv  20220318-045721-silpo-stores.csv  20220319-045656-silpo-stores.csv  20220320-045716-silpo-stores.csv  20220320-102556-silpo-stores.csv  20220320-124304-silpo-stores.csv  20220321-141309-silpo-stores.csv  20220322-095746-silpo-stores.csv  20220322-222428-silpo-stores.csv  20220323-095755-silpo-stores.csv  20220324-095740-silpo-stores.csv  20220324-103450-silpo-stores.csv  20220324-104738-silpo-stores.csv  20220325-095744-silpo-stores.csv  20220326-095809-silpo-stores.csv  20220327-095805-silpo-stores.csv  20220328-095803-silpo-stores.csv  20220329-095752-silpo-stores.csv  20220330-095738-silpo-stores.csv  20220331-095755-silpo-stores.csv  20220401-095753-silpo-stores.csv  20220402-095756-silpo-stores.csv  20220403-095746-silpo-stores.csv  20220404-095750-silpo-stores.csv  20220405-095754-silpo-stores.csv  20220406-095747-silpo-stores.csv  20220407-095759-silpo-stores.csv  20220408-095811-silpo-stores.csv  20220409-095752-silpo-stores.csv  20220410-095805-silpo-stores.csv  20220411-095825-silpo-stores.csv  20220412-095745-silpo-stores.csv  20220413-095747-silpo-stores.csv  20220414-095746-silpo-stores.csv  20220415-095804-silpo-stores.csv  20220416-095757-silpo-stores.csv  20220417-095754-silpo-stores.csv  20220418-095741-silpo-stores.csv  (+280 more)
(+4 files in other folders)
