[tool.poetry]
name = "silpostores"
version = "0.1.0"
description = ""
authors = ["Jun-Dir Liew <jundir@gmail.com>"]

[tool.poetry.scripts]
silpostores = "silpostores.main:cli"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"
beautifulsoup4 = "^4.10.0"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
